--- a/app/src/main/res/layout/fragment_submission.xml
+++ b/app/src/main/res/layout/fragment_submission.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.assignment.PlaceholderFragment">
+    tools:context=".ui.assignment.SubmissionFragment">
 
     <TextView
         android:id="@+id/label_1"
@@ -15,57 +13,53 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
-        android:text="Problem statement"/>
+        android:textColor="@color/colorError"
+        android:text="UNSUBMITTED"/>
 
     <TextView
-        android:id="@+id/problem"
+        android:id="@+id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_below="@id/label_1"
-        android:textSize="14dp"
-        android:text="Problem statement"/>
+        android:textSize="16sp"
+        android:text="Time left: "/>
+
+    <Button
+        android:id="@+id/upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_below="@id/status"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:typeface="monospace"
+        android:textAllCaps="true"
+        android:text="Upload"
+        android:textColor="@color/colorWhite"
+        android:drawableStart="@drawable/icon_cloud_upload"
+        android:drawablePadding="15dp"
+        android:drawableTint="@color/colorWhite"
+        android:paddingHorizontal="25dp"
+        android:paddingVertical="5dp"
+        android:background="@drawable/btn_blue"
+        android:layout_centerHorizontal="true"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/attachments_to_problem"
-        android:layout_below="@id/problem"
+        android:layout_below="@id/upload"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         tools:listitem="@layout/layout_file_attachment"/>
-
-    <TextView
-        android:id="@+id/label_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
-        android:text="General Instructions"
-        android:layout_below="@id/attachments_to_problem"/>
-
-    <TextView
-        android:id="@+id/instructions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_below="@id/label_2"
-        android:textSize="14dp"
-        android:text="Instructions"/>
-
 
 </RelativeLayout>
