--- a/app/src/main/res/layout/edit_user_profile.xml
+++ b/app/src/main/res/layout/edit_user_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background">
+    android:background="@color/colorPrimary">
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -29,7 +29,8 @@
             android:contentDescription="@string/add_an_optional_profile_photo"/>
     </FrameLayout>
 
-    <view
+    <View
+
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@id/frameProfileImage"
