--- a/app/src/main/res/layout/layout_test_student_thumbnail.xml
+++ b/app/src/main/res/layout/layout_test_student_thumbnail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -10,7 +11,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="4"
-        android:text="Test Name"
         android:textSize="16sp"
         android:textColor="@color/colorBlack"
         android:textStyle="bold"
@@ -21,20 +21,20 @@
         android:id="@+id/status"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:text="YET TO START"
-        android:textSize="16sp"
+        android:layout_weight="5"
+        android:text="@string/yet_to_start"
+        android:textSize="14sp"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         android:gravity="center_vertical|end"
         android:paddingEnd="10dp"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        tools:ignore="RtlSymmetry" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:paddingHorizontal="10dp"
         android:gravity="center"
         android:layout_gravity="center"
         android:orientation="horizontal"
@@ -45,18 +45,17 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="80"
             android:textSize="14sp"
             android:textColor="@color/colorBlack"
             android:textStyle="bold"
             android:background="@drawable/text_view_add_course"
-            android:gravity="center"/>
+            android:gravity="center"
+            tools:ignore="NestedWeights" />
         <TextView
             android:id="@+id/fMarks"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="100"
             android:textSize="14sp"
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold"
