update test activity

--- a/app/src/main/res/layout/layout_question.xml
+++ b/app/src/main/res/layout/layout_question.xml
@@ -145,13 +145,13 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/upload"
                 android:padding="10dp"
-                android:hint="Your answer here"
+                android:hint="@string/your_answer_here"
                 android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
-                android:textColorHint="@color/colorGrey"
+                android:textColorHint="@color/GreyDark"
                 app:hintTextColor="@color/colorPrimary"
                 android:id="@+id/answer_layout"
                 app:boxStrokeColor="@color/colorPrimary"
-                >
+                android:visibility="gone">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/answer_text"
                     android:layout_width="match_parent"
@@ -161,6 +161,14 @@
                     android:text="This is sample answer text This is sample answer text This is sample answer text This is sample answer text This is sample answer text This is sample answer text This is sample answer text This is sample answer text This is sample answer text This is sample answer text"
                     android:inputType="textMultiLine"/>
             </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:id="@+id/review_answer_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_below="@id/upload"
+                android:background="@drawable/text_view_add_course"
+                android:layout_margin="5dp"/>
         </RelativeLayout>
 
     </com.google.android.material.card.MaterialCardView>
