--- a/app/src/main/res/menu/home_drawer_menu_1.xml
+++ b/app/src/main/res/menu/home_drawer_menu_1.xml
@@ -15,6 +15,10 @@
         android:id="@+id/homeDrawerMenuItem6"/>
 
     <item
+        android:title="TEST_DEBUG"
+        android:id="@+id/homeDrawerMenuItem7"/>
+
+    <item
         android:title="Setup Your Profile"
         android:id="@+id/homeDrawerMenuItem4"/>
     <item
