--- a/app/src/main/res/menu/teacher_menu.xml
+++ b/app/src/main/res/menu/teacher_menu.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:title="@string/notifications"
+        android:id="@+id/notifications"
+        android:icon="@drawable/icon_notifications"
+        app:showAsAction="ifRoom"
+        />
+    <item
+        android:title="Tests"
+        android:id="@+id/tests"
+        />
     <item
         android:title="Course Stats"
         android:id="@+id/course_stats"
