--- a/app/src/main/res/layout-v26/stat_card_teacher.xml
+++ b/app/src/main/res/layout-v26/stat_card_teacher.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
-    android:id="@+id/courseCard"
+    android:id="@+id/courseCard1"
     android:layout_width="240dp"
     android:layout_height="220dp"
     app:cardCornerRadius="10dp"
