--- a/app/src/main/res/layout-v26/card_grid_interest.xml
+++ b/app/src/main/res/layout-v26/card_grid_interest.xml
@@ -6,12 +6,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_horizontal"
     android:layout_marginHorizontal="3dp"
-    android:layout_marginVertical="6dp">
-
-
+    android:layout_marginVertical="6dp"
+    android:id="@+id/interestCard"
+    >
     <com.google.android.material.card.MaterialCardView
         android:theme="@style/MaterialTheme"
-        android:id="@+id/interestCard"
         android:layout_width="120dp"
         android:layout_height="120dp"
         app:cardCornerRadius="10dp"
