--- a/app/src/main/res/layout-v26/class_card.xml
+++ b/app/src/main/res/layout-v26/class_card.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent" 
     android:layout_height="100dp"
     android:orientation="horizontal"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:id="@+id/card">
     <LinearLayout
         android:layout_width="100dp"
         android:layout_height="match_parent"
