--- a/app/src/main/res/layout/stat_card_teacher.xml
+++ b/app/src/main/res/layout/stat_card_teacher.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_horizontal"
-    android:layout_margin="3dp">
+    android:layout_margin="3dp"
+    android:id="@+id/courseCard1"
+    >
 
 
     <androidx.cardview.widget.CardView
