--- a/app/src/main/res/layout/course_introductory_content_card.xml
+++ b/app/src/main/res/layout/course_introductory_content_card.xml
@@ -6,31 +6,29 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_horizontal"
-    android:layout_marginTop="3dp">
-
-
+    android:layout_marginTop="3dp"
+    android:backgroundTint="@color/transparent">
     <androidx.cardview.widget.CardView
-
         android:id="@+id/courseIntroductoryCard"
-        android:layout_width="wrap_content"
-        app:cardBackgroundColor="@color/colorLiteGrey"
+        android:layout_width="200dp"
+        app:cardBackgroundColor="@color/transparent"
         android:layout_height="160dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="12dp">
-
+        app:cardElevation="0dp"
+        android:background="@color/transparent">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingTop="10dp"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_gravity="center">
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxWidth="100dp"
-                android:maxHeight="100dp"
+                android:layout_height="match_parent"
                 android:id="@+id/introductory_image"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription"
+                android:scaleType="matrix"
+                android:background="@color/transparent"
+                android:backgroundTint="@color/transparent"/>
             <!--<VideoView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
