--- a/app/src/main/res/layout/teachers_viewof_course.xml
+++ b/app/src/main/res/layout/teachers_viewof_course.xml
@@ -13,7 +13,7 @@
         android:indeterminateTint="@color/colorPrimary"/>
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/loadingTeachersViewCourse"
         android:id="@+id/course_teacher_frame"
         android:layout_above="@+id/bottom_navigation_teacher"/>
