--- a/app/src/main/res/layout/course_introductory_content_card.xml
+++ b/app/src/main/res/layout/course_introductory_content_card.xml
@@ -28,7 +28,8 @@
                 tools:ignore="ContentDescription"
                 android:scaleType="matrix"
                 android:background="@color/transparent"
-                android:backgroundTint="@color/transparent"/>
+                android:backgroundTint="@color/transparent"
+                android:visibility="gone"/>
             <!--<VideoView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -36,7 +37,9 @@
             <com.google.android.exoplayer2.ui.PlayerView
                 android:id="@+id/introductory_video"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                app:show_buffering="when_playing"
+                app:resize_mode="fill"/>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
