--- a/app/src/main/res/layout-v26/card_grid_interest.xml
+++ b/app/src/main/res/layout-v26/card_grid_interest.xml
@@ -1,61 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:theme="@style/MaterialTheme"
+    android:layout_width="120dp"
+    android:layout_height="120dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="12dp"
+    android:background="@color/colorPrimary"
+    android:checkable="true"
+    app:checkedIconTint="@color/colorLiteGrey"
+    android:foregroundTint="@color/colorAccent"
     android:layout_gravity="center_horizontal"
     android:layout_marginHorizontal="3dp"
     android:layout_marginVertical="6dp"
-    android:id="@+id/interestCard"
-    >
-    <com.google.android.material.card.MaterialCardView
-        android:theme="@style/MaterialTheme"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="12dp"
-        android:background="@color/colorPrimary"
-        android:checkable="true"
-        app:checkedIconTint="@color/colorLiteGrey"
-        android:foregroundTint="@color/colorAccent">
+    android:id="@+id/interestCard">
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@color/colorPrimary"
+        android:weightSum="100">
+
+        <ImageView
+            android:id="@+id/interestImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:gravity="center"
-            android:background="@color/colorPrimary"
-            android:weightSum="100">
+            android:textColor="@color/colorWhite"
+            android:textSize="64sp"
+            android:typeface="sans"
+            android:textStyle="bold"
+            android:layout_weight="30"
+            android:src="@drawable/lightlogo2"
+            android:scaleType="centerCrop"/>
 
-            <ImageView
-                android:id="@+id/interestImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textColor="@color/colorWhite"
-                android:textSize="64sp"
-                android:typeface="sans"
-                android:textStyle="bold"
-                android:layout_weight="30"
-                android:src="@drawable/lightlogo2"
-                android:scaleType="centerCrop"/>
+        <TextView
+            android:id="@+id/interestName"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@color/colorWhite"
+            android:typeface="sans"
+            android:textStyle="bold"
+            android:layout_weight="70"
+            android:autoSizeTextType="uniform"
+            android:padding="2dp"/>
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/interestName"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textColor="@color/colorWhite"
-                android:typeface="sans"
-                android:textStyle="bold"
-                android:layout_weight="70"
-                android:autoSizeTextType="uniform"
-                android:padding="2dp"/>
-        </LinearLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-
-
-</RelativeLayout>
-
+</com.google.android.material.card.MaterialCardView>
