--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -3,7 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="##000"
+    android:theme="@style/MaterialTheme"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
     <ProgressBar
         android:id="@+id/loadingUserProfile"
         android:layout_width="wrap_content"
@@ -11,222 +15,95 @@
         android:layout_gravity="center"
         android:layout_marginTop="12dp"
         android:visibility="gone"
+        android:foregroundGravity="center"
+        android:indeterminateTint="@color/colorPrimary"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/loadingUserProfile">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:src="@drawable/default_person_image"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:id="@+id/imgProfileImage"/>
+
+            <!--<view
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/imgProfileImage"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="10dp"/>-->
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/username"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextUserName"
+                    android:inputType="text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorPrimary"/>
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/phone"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextPhoneNumber"
+                    android:inputType="number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorPrimary"/>
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email_id"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextEmailId"
+                    android:inputType="textEmailAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorPrimary"/>
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+    </ScrollView>
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorWhite"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:text="@string/save"
+        android:letterSpacing="0.3"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:indeterminateTint="@color/colorYellow"/>
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:src="@drawable/default_person_image"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:id="@+id/imgProfileImage"
-        android:layout_below="@id/loadingUserProfile"/>
-
-    <!--<view
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/imgProfileImage"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginTop="10dp"/>-->
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="100"
-        android:id="@+id/linearLayoutName"
-        android:layout_below="@id/imgProfileImage"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:padding="3dp"
-        android:gravity="center_vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/name"
-            android:textSize="14sp"
-            android:textColor="@color/colorWhite"
-            android:typeface="serif"
-            android:layout_weight="60"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
-            android:padding="3dp"/>
-        <TextView
-            android:id="@+id/profileName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/colorYellow"
-            android:typeface="sans"
-            android:textStyle="bold"
-            android:layout_weight="40"
-            android:gravity="center_vertical"
-            android:padding="3dp"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="100"
-        android:id="@+id/linearLayoutContact"
-        android:layout_below="@id/linearLayoutName"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:padding="3dp"
-        android:gravity="center_vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/phone"
-            android:textSize="14sp"
-            android:textColor="@color/colorWhite"
-            android:typeface="serif"
-            android:layout_weight="60"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
-            android:padding="3dp"/>
-        <TextView
-            android:id="@+id/profilePhone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/colorYellow"
-            android:typeface="sans"
-            android:textStyle="bold"
-            android:layout_weight="40"
-            android:gravity="center_vertical"
-            android:padding="3dp"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="100"
-        android:id="@+id/linearLayoutEmail"
-        android:layout_below="@id/linearLayoutContact"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:padding="3dp"
-        android:gravity="center_vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/email_id"
-            android:textSize="14sp"
-            android:textColor="@color/colorWhite"
-            android:typeface="serif"
-            android:layout_weight="60"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
-            android:padding="3dp"/>
-        <TextView
-            android:id="@+id/profileEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autoSizeTextType="uniform"
-            android:textColor="@color/colorYellow"
-            android:typeface="sans"
-            android:textStyle="bold"
-            android:layout_weight="40"
-            android:gravity="center_vertical"
-            android:padding="3dp"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="100"
-        android:id="@+id/linearLayoutCoursesTaken"
-        android:layout_below="@id/linearLayoutEmail"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:padding="3dp"
-        android:gravity="center_vertical"
-        android:visibility="gone">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/number_of_courses_taken"
-            android:textSize="14sp"
-            android:textColor="@color/colorWhite"
-            android:typeface="serif"
-            android:layout_weight="60"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
-            android:padding="3dp"/>
-        <TextView
-            android:id="@+id/profileNumCoursesTaken"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/colorYellow"
-            android:typeface="sans"
-            android:textStyle="bold"
-            android:layout_weight="40"
-            android:gravity="center_vertical"
-            android:padding="3dp"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="100"
-        android:id="@+id/linearLayoutCoursesTaught"
-        android:layout_below="@id/linearLayoutCoursesTaken"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:padding="3dp"
-        android:gravity="center_vertical"
-        android:visibility="gone">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/number_of_courses_taught"
-            android:textSize="14sp"
-            android:textColor="@color/colorWhite"
-            android:typeface="serif"
-            android:layout_weight="60"
-            android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
-            android:padding="3dp"/>
-        <TextView
-            android:id="@+id/profileNumCoursesTaught"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/colorYellow"
-            android:typeface="sans"
-            android:textStyle="bold"
-            android:layout_weight="40"
-            android:gravity="center_vertical"
-            android:padding="3dp"/>
-
-    </LinearLayout>
-
-
-    <!--
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        android:padding="10dp"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:textColor="@color/colorPrimaryDark"
-        android:text="CrackSolver"
-        android:gravity="center"
-        android:id="@+id/textUserName"/>
-
-     -->
+        android:id="@+id/updateChange"
+        android:clickable="true"
+        android:focusable="true"/>
     
 </RelativeLayout>
